<resources>
    <string name="app_name">Dancing</string>
    <string name="common_textcolor">#ffffffff</string>
    <string name="white">#ffffffff</string>
    <string name="blue">#FF50E3C2</string>
    <string name="gray">#FFF0F0F0</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="main_register_text">注册</string>
    <string name="main_login_text">登陆</string>
    <string name="main_des1">每个动作都精准示范</string>
    <string name="main_des2">规划陪伴你的训练过程</string>
    <string name="main_des3">分享汗水后你的感性</string>
    <string name="main_des4">全程记录你的健身数据</string>
    <string name="title_activity_rigster_phone_num">RigsterPhoneNumActivity</string>
    <string name="worth_have">你值得拥有</string>
    <string name="register_phonenum_title">注册</string>
    <string name="please_input_phonenum">请输入手机号</string>
    <string name="getcode_text">获取验证码</string>
    <string name="title_text">标题</string>
    <string name="back_text">返回</string>
    <string name="other_way_register">其他方式快速注册</string>
    <string name="phonenum_invalid">手机号不合法</string>
    <string name="title_activity_verify_code">VerifyCodeActivity</string>
    <string name="please_input_verifycode">请输入验证码</string>
    <string name="verify_text">验证</string>
    <string name="please_input_acount">请输入密码</string>
    <string name="please_input_pwd">登录</string>
    <string name="theme_color">#ff529688</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_title">注册</string>
    <string name="cn_phone_code">86</string>
    <string name="login_title">登陆</string>
    <string name="login_failed">不是服务器挂了就是你没联网！</string>
    <string name="input_phonenum">请输入账号</string>
    <string name="register_now"><![CDATA[现在注册 >]]></string>
    <string name="login_now"><![CDATA[现在登陆 >]]></string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="agree_ower_layer">注册代表已经同意Dancing用户协议</string>
    <string name="back2register"><![CDATA[返回注册 >]]></string>
    <string name="info_username_text">请输入用户名</string>
    <string name="info_full_userinfo">填写完毕</string>
    <string name="info_sex">性别</string>
    <string name="info_password_invalid">密码不合法</string>
    <string name="info_sex_tips">我实在不知道你是男是女</string>
    <string name="info_nousername_tips">用户名都不输入,你要逆天啊~</string>
    <string name="contry_code">86</string>
    <string name="verifycode_error">验证码错误</string>
    <string name="register_verifycode_notips">验证码为空</string>
    <string name="dancing_total_time">总时长</string>
    <string name="dancing_day_time">日均</string>
    <string name="dancing_skill_point">舞蹈技术分</string>
    <string name="commit_text">提交</string>
    <string name="account_cannot_null">账号不能为空哦</string>
    <string name="pwd_cannot_null">密码不能为空哦</string>
    <string name="account_format_error">账号格式不对</string>
    <string name="reclick_exit_app">再按一次退出</string>
    <string name="pre_order_des">第</string>
    <string name="after_order_des">节</string>
    <string name="discover">发现</string>
    <string name="careful">关注</string>
    <string name="newest">最新</string>
    <string name="friend">好友</string>
</resources>
