<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:id="@+id/title_bg"
    >

    <ImageView
        android:id="@+id/back_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:src="@mipmap/back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@+id/back_iv"
        android:layout_toRightOf="@+id/back_iv"
        android:text="@string/back_text"
        />
    <!--android:textColor="@string/white"-->
    android:textColor="@string/common_textcolor"
    <TextView
        android:text="@string/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"

        android:textSize="18sp"
        android:id="@+id/title_text" />

    <ImageView
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:src="@mipmap/back"
        android:layout_marginRight="20dp"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <ImageView
        android:scaleType="fitXY"
        android:layout_alignParentBottom="true"
        android:src="@mipmap/title_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>
