<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:hint="@string/please_input_phonenum"
        android:background="@mipmap/phonenum_et_bg"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/phonenum_et" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getcode_text"
        android:id="@+id/getcode_btn"
        android:layout_below="@+id/phonenum_et"
        android:layout_marginTop="30dp"
        android:background="@drawable/getcode_shape"
        android:layout_alignRight="@+id/phonenum_et"
        android:layout_alignEnd="@+id/phonenum_et"
        android:layout_alignLeft="@+id/phonenum_et"
        android:layout_alignStart="@+id/phonenum_et" />

    <RelativeLayout
        android:layout_below="@id/getcode_btn"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/other_register_tv"
            android:layout_centerInParent="true"
            android:text="@string/other_way_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_marginRight="2dp"
            android:layout_marginLeft="10dp"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/other_register_tv"
            android:src="@mipmap/title_line"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_marginLeft="2dp"
            android:layout_toRightOf="@id/other_register_tv"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:src="@mipmap/title_line"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</RelativeLayout>
