<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_color">
    <!--<include layout="@layout/common_toolbar"/>-->


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@mipmap/splash" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_bg_color"></FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/fullinfo_userhead_iv"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:src="@mipmap/splash" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/gray_bg_color"
                android:src="@mipmap/ic_menu" />

            <EditText
                android:id="@+id/fullinfo_username_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"

                android:background="@color/white_gray_color"
                android:gravity="center"
                android:hint="@string/info_username_text"
                android:textColor="@color/text_color"
                android:textColorHint="@color/gray_text_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@color/white_gray_color"
                android:src="@mipmap/ic_menu" />

            <EditText

                android:id="@+id/fullinfo_pwd_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gray_bg_color"
                android:gravity="center"
                android:hint="@string/please_input_acount"
                android:textColor="@color/text_color"
                android:textColorHint="@color/gray_text_color" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@color/white_gray_color"
                android:src="@mipmap/ic_menu" />

            <TextView
                android:id="@+id/fullinfo_yearsold_tv"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:background="@color/gray_bg_color"
                android:gravity="center"
                android:hint="年龄"
                android:textColor="@color/text_color"
                android:textColorHint="@color/gray_text_color" />
            <TextView
                android:textColorHint="@color/gray_text_color"
                android:drawableLeft="@mipmap/shu_line"
                android:gravity="center"
                android:textColor="@color/text_color"
                android:background="@color/gray_bg_color"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/fullinfo_sex_tv"
                android:textSize="15sp"
                android:hint="@string/info_sex" />
        </LinearLayout>
        <Button
            android:id="@+id/fullinfo_commit_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/getcode_shape"
            android:text="@string/info_full_userinfo"
            android:textColor="@color/text_color" />
    </LinearLayout>

    <TextView
        android:text="@string/back2register"
        android:layout_centerHorizontal="true"
        android:textColor="@color/text_color"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fullinfo_back2register_tv" />
    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avloadingIndicatorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        app:indicator="Pacman"
        app:indicator_color="@color/WHITE" />
</RelativeLayout>
