<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_color">
    <!--<include layout="@layout/common_toolbar"/>-->


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@mipmap/splash" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_bg_color"></FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/gray_bg_color"
                android:src="@mipmap/ic_menu" />

            <EditText
                android:id="@+id/phonenum_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"

                android:background="@color/white_gray_color"
                android:gravity="center"
                android:hint="@string/please_input_phonenum"
                android:textColor="@color/text_color"
                android:textColorHint="@color/gray_text_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@color/white_gray_color"
                android:src="@mipmap/ic_menu" />

            <EditText
                android:id="@+id/verifycode_et"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:background="@color/gray_bg_color"
                android:gravity="center"
                android:hint="@string/please_input_verifycode"
                android:textColor="@color/text_color"
                android:textColorHint="@color/gray_text_color" />

            <TextView
                android:id="@+id/getcode_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gray_bg_color"
                android:drawableLeft="@mipmap/shu_line"
                android:gravity="center"
                android:text="获取验证码"
                android:textColor="@color/text_color"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/gray_bg_color"
                android:src="@mipmap/ic_menu" />

            <EditText
                android:id="@+id/forget_pwd_tv"
                android:layout_width="match_parent"
                android:layout_height="50dp"

                android:background="@color/white_gray_color"
                android:gravity="center"
                android:hint="请输入密码"
                android:textColor="@color/text_color"
                android:textColorHint="@color/gray_text_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/gray_bg_color"
                android:src="@mipmap/ic_menu" />

            <EditText
                android:id="@+id/forget_repwd_tv"
                android:layout_width="match_parent"
                android:layout_height="50dp"

                android:background="@color/white_gray_color"
                android:gravity="center"
                android:hint="请再次输入密码"
                android:textColor="@color/text_color"
                android:textColorHint="@color/gray_text_color" />
        </LinearLayout>


        <Button
            android:id="@+id/forget_commit_tv"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/getcode_shape"
            android:text="@string/commit_text"
            android:textColor="@color/text_color" />

    </LinearLayout>

    <TextView
        android:id="@+id/go_login_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/login_now"
        android:textColor="@color/text_color" />

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avloadingIndicatorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        app:indicator="Pacman"
        app:indicator_color="@color/WHITE" />
</RelativeLayout>
